# Text-classification-with-recurrent-networks-and-transformers

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: main.ipynb
training_history/: LSTM-BERT_history.json  TRANSFORMER-BERT_history.json
